Bug 713778 - nsICycleCollectorListener should not enable trace_all by default, r=mccr8